<resources>
    <string name="app_name">hkag_app_android</string>
    <string name="action_settings">Settings</string>
    <string name="back_button">back button</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="NavigationTop">navigationTop</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--headhouse-->
    <string name="beadhouse_title">選擇安老院舍</string>
    <string name="introduce_content">能安享晚年，相信是每位長者的願望。在香港，除了居家安老外，入住安老院舍亦是一個選擇。而本港安老院舍林立，如何選擇適合長者、又有良好照顧及護理質素的院舍是大眾關注的議題。\n\n當選擇安老院時，可以利用五官感覺去協助揀選優質院舍，做到眼到、耳到、鼻到及口到
選擇已通過認可機構之專業評審的院舍，確保院舍服務質素</string>
    <string name="introduce_title">如何选择？</string>
    <string name="beadhouse_icon">安老院舍图标</string>
    <string name="video_title">護老技巧示範短片</string>
    <string name="workshop_brief_title">護老者工作坊</string>
    <string name="workshop_title">工作坊詳情及報名方法:</string>
    <string name="website_link_button">前往網頁</string>
    <string name="contact_button">　聯絡我們</string>
    <string name="contact_title">最新活動資訊</string>
    <string name="online_learning_brief_title">院舍網上學習平台</string>
    <string name="online_learning_button">前往網上學習平台</string>
    <string name="contact_information_title">護老者咨詢</string>
    <string name="contact_us_title">聯絡我們</string>
    <string name="host_organization">主辦機構</string>
    <string name="donor_agencies">捐助機構</string>
    <string name="contact_telephone">聯絡電話</string>
    <string name="phone_image">phone image</string>
    <string name="to_website">前往网页</string>
    <string name="foundation">foundation</string>
    <string name="project_brief_title">計劃簡介</string>
    <string name="project_brief">隨著香港人口持續老化，安老服務需求與日俱增，大眾關注如何選擇合適的安老服務，並且重視安老院舍的服務質素，有見及此，香港賽馬會慈善信託基金捐助香港老年學會，推出為期三年的「賽馬會護老易學習計劃」，透過建立及活用網上平台，協助提升從事安老服務人員的服務質素以及提升大眾對選擇優質安老院舍的認識。</string>
    <string name="project_introduce_title">計劃目的：</string>
    <string name="number_1">1.</string>
    <string name="number_1_content">透過課堂學習及實地指導提升院舍管理及專業護理的知識</string>
    <string name="number_2">2.</string>
    <string name="number_2_content">加強前線員工的實務照顧及護理技巧</string>
    <string name="number_3">3.</string>
    <string name="number_3_content">啟發安老服務員工透過網上平台持續學習</string>
    <string name="number_4">4.</string>
    <string name="number_4_content">"透過社區講座、展覽及手機應用程式認識如何選擇優質安老院舍 "</string>
    <string name="networkLearningString">網上學習平台</string>
    <string name="project_number_01">1</string>
    <string name="online_learning_point01">• 網站、手機應用程式垮平台學習</string>
    <string name="online_learning_point02">• 提供護老知識及安老服務資訊</string>
    <string name="online_learning_point03">• 隨時隨地持續進修</string>
    <string name="project_number_02">2</string>
    <string name="classroomLearningString">課堂學習</string>
    <string name="setting_title_name">設定</string>
    <string name="setting_label_notification">通知</string>
    <string name="setting_label_private_policy">私隐政策</string>
    <string name="setting_label_intellectual">知識產權告示</string>
    <string name="to_network_learning">前往網上學習平台</string>
    <string name="connect_us">聯絡我們</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>