<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_20">
        <!--返回按鈕-->

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="28dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/action_settings"
            android:onClick="onBackToHomeNavigationPage"
            app:srcCompat="@drawable/back_button" />
        <!--標題-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--圖標icon-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:background="@color/themLightColor" />

                <LinearLayout
                    android:id="@+id/space"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_alignParentTop="true"
                    android:background="@color/themColor"
                    android:orientation="horizontal" />

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/telephone" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="100dp"
                android:background="@color/themLightColor"
                android:gravity="center"
                android:text="@string/project_brief_title"
                android:textColor="#009688"
                android:textSize="@dimen/font_27"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/padding_20"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingVertical="@dimen/padding_40">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/host_organization"
                android:textSize="@dimen/font_16" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/host_organization"
                android:paddingTop="@dimen/padding_20"
                android:scaleType="fitCenter"
                android:src="@drawable/company_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="@dimen/padding_20"
                android:text="@string/donor_agencies"
                android:textSize="@dimen/font_16" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/foundation"
                android:scaleType="fitCenter"
                android:src="@drawable/foundation" />
        </LinearLayout>

        <!-- 簡介內容-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_20"
            android:text="@string/project_brief"
            android:textColor="@color/white"
            android:textSize="@dimen/font_18" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/decoration" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/griaty_teal_700"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_20"
            android:paddingLeft="@dimen/padding_20"
            android:paddingEnd="@dimen/padding_20"
            android:paddingRight="@dimen/padding_20"
            android:paddingBottom="@dimen/padding_20">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_introduce_title"
                android:textColor="@color/white"
                android:textSize="@dimen/font_22"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/number_1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_32"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="@dimen/padding_20"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/number_1_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_18"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/number_2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_32"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="@dimen/padding_20"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/number_2_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_18"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/number_3"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_32"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="@dimen/padding_20"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/number_3_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_18"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/number_4"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_32"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="@dimen/padding_20"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/number_4_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_18"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pink"
            android:orientation="vertical"
            android:paddingVertical="@dimen/padding_43"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="@dimen/padding_246"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_50dp_red_background_corners"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/padding_20"
                    >

                    <TextView
                        android:layout_marginHorizontal="@dimen/padding_10"
                        android:layout_width="@dimen/padding_36"
                        android:layout_height="@dimen/padding_36"
                        android:text="@string/project_number_01"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:textSize="@dimen/font_18"
                        android:background="@drawable/shape_circle_white" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_25"
                        android:text="@string/networkLearningString"
                        />


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>